--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-Hello World!!!
+	<head>
+		<title>Sample Html Page</title>
+	</head>
+	<body>
+		<h2 class="heading">Hello World!!!</h2>
+		<p class="para">This is a little description about this page</p>
+	</body>
 </html>
